crates/keron-lang/tests/corpus/errors/check/string_in_arithmetic.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `+` requires `Int`, `Double`, or `String` operands, found `String` and `Int`
  --> 1:9
  |
1 | val a = "hello" + 1
  |         ^^^^^^^^^^^
